k8s/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bootsync-service
  namespace: bootsync
spec:
  selector:
    app: bootsync-app
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
